Header done + adaptive

--- a/index.html
+++ b/index.html
@@ -1,27 +1,122 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>Template</title>
+		<title>Creativia</title>
 
 		<meta name="description" content="">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
+		<link href="fonts/fontawesome/fontawesome-free-5.11.2-web/css/all.min.css" rel="stylesheet">
 		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/style.min.css">
 
 	</head>
 	<body>
 		
-    <header class="header">
-			<h1>Hello, World!!!</h1>
+    <header class="header" style="background-image: url('img/bg/bg_header.jpg');">
+
+			<div class="header__top">
+				<div class="container">
+					<div class="header__top-wrap">
+
+						<div class="header__top-logo logo">
+							<a href="#"><img src="img/logo_creativia.png" alt="Logotype"></a>
+						</div>
+
+						<div class="header__top-nav navbar">
+							<ul class="navbar__list">
+								<li class="navbar__list-logo"><img src="img/logo_creativia.png" alt="Logotype"></li>
+								<li><a href="" class="navbar__link navbar__link--active">Home</a></li>
+								<li><a href="" class="navbar__link">about us</a></li>
+								<li><a href="" class="navbar__link">PORTFOLIO</a></li>
+								<li><a href="" class="navbar__link">clients</a></li>
+								<li><a href="" class="navbar__link">team</a></li>
+								<li><a href="" class="navbar__link">services</a></li>
+								<li><a href="" class="navbar__link">Blog</a></li>
+								<li><a href="" class="navbar__link">Contact</a></li>
+							</ul>               
+						</div>
+
+						<div class="header__top-hamburger hamburger-btn">
+							<button class="hamburger hamburger--squeeze" type="button">
+								<span class="hamburger-box">
+									<span class="hamburger-inner"></span>
+								</span>
+							</button>
+						</div>
+
+					</div>
+				</div>
+			</div>
+
+			<div class="header__main">
+				<div class="header__main-composition" id="header-slider">
+					
+					<div class="header__main-slide">
+						<h1 class="section__title">why creativia ?</h1>
+						<div class="header__main-text">
+							<p>
+								Lorem ipsum dolor sit amet, consectetur adipiscing 
+								elit. Ut et dolor justo. Phasellus eu ligula ac nisl 
+								volutpat tincidunt. Vestibulum vitae rhoncus odio 
+								Fusce sed enim erat. Mauris dictum lorem eu tortor 
+								porta placerat. Suspendisse ac vestibulum eros. Nulla 
+								mi ipsum, consequat commodo condimentum vitae.
+							</p>
+						</div>
+						<div class="header__main-buttons">
+							<button class="btn header__main-btn">features</button>
+							<button class="btn header__main-btn">Free PSD</button>
+						</div>
+					</div>
+
+					<div class="header__main-slide">
+						<h1 class="section__title">why creativia ? (Slide Second)</h1>
+						<div class="header__main-text">
+							<p>
+								Lorem ipsum dolor sit amet, consectetur adipiscing 
+								elit. Ut et dolor justo. Phasellus eu ligula ac nisl 
+								volutpat tincidunt. Vestibulum vitae rhoncus odio 
+								Fusce sed enim erat.
+							</p>
+						</div>
+						<div class="header__main-buttons">
+							<button class="btn header__main-btn">features</button>
+							<button class="btn header__main-btn">Free PSD</button>
+						</div>
+					</div>
+
+					<div class="header__main-slide">
+						<h1 class="section__title">why creativia ? (Slide Third)</h1>
+						<div class="header__main-text">
+							<p>
+								Lorem ipsum dolor sit amet, consectetur adipiscing 
+								elit. Ut et dolor justo. Phasellus eu ligula ac nisl 
+								volutpat tincidunt. Vestibulum vitae rhoncus odio 
+								Fusce sed enim erat. Mauris dictum lorem eu tortor 
+								porta placerat. Suspendisse ac vestibulum eros. Nulla 
+								mi ipsum, consequat commodo condimentum vitae.Nulla 
+								mi ipsum, consequat commodo condimentum vitae.Nulla 
+								mi ipsum, consequat commodo condimentum vitae.
+							</p>
+						</div>
+						<div class="header__main-buttons">
+							<button class="btn header__main-btn">features</button>
+							<button class="btn header__main-btn">Free PSD</button>
+						</div>
+					</div>
+
+				</div>
+			</div>
+
 		</header>
 
     <main class="main"></main>
 
-    <footer class="footer"></footer>
-
+		<footer class="footer"></footer>
+		
 		<script src="js/scripts.min.js"></script>
 	</body>
 </html>
